--- a/HolidayPlanner.Requests.Console/HolidayPlanner.Requests.Console.csproj
+++ b/HolidayPlanner.Requests.Console/HolidayPlanner.Requests.Console.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0971C65D-8AF6-47FA-9683-3FD3B8D750BE}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{47AA1E69-ACBB-4A3B-8539-8BFF149F8BA1}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HolidayPlanner.Requests</RootNamespace>
-    <AssemblyName>HolidayPlanner.Requests</AssemblyName>
+    <RootNamespace>HolidayPlanner.Requests.Console</RootNamespace>
+    <AssemblyName>HolidayPlanner.Requests.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,17 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApprovedHolidayRequest.cs" />
-    <Compile Include="Connector\ConnectorResolver.cs" />
-    <Compile Include="Connector\Email\Email.cs" />
-    <Compile Include="Connector\Email\EmailConnector.cs" />
-    <Compile Include="Connector\IConnectorResolver.cs" />
-    <Compile Include="HolidayRequest.cs" />
-    <Compile Include="Connector\IConnector.cs" />
-    <Compile Include="NewEmployeeHolidayRequest.cs" />
+    <Compile Include="MockEmailServerConnector.cs" />
+    <Compile Include="MockEmailServerConnectorResolver.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RejectedHolidayRequest.cs" />
-    <Compile Include="UnsubmitedHolidayRequest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HolidayPlanner.Requests\HolidayPlanner.Requests.csproj">
+      <Project>{0971C65D-8AF6-47FA-9683-3FD3B8D750BE}</Project>
+      <Name>HolidayPlanner.Requests</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
